Update: animaciones y transiciones

--- a/paga-web-astro/src/components/Footer.astro
+++ b/paga-web-astro/src/components/Footer.astro
@@ -11,7 +11,7 @@
       <!-- Logo Izquierdo -->
       <div class="flex-shrink-0">
         <img
-          src="logos/logo_ipn.jpg"
+          src="/logos/logo_ipn.jpg"
           alt="Logo IPN"
           class="h-32 w-auto md:h-40"
         />
@@ -39,7 +39,7 @@
       <!-- Logo Derecho -->
       <div class="flex-shrink-0">
         <img
-          src="logos/ciiemad-logo.png"
+          src="/logos/ciiemad-logo.png"
           alt="Logo CIIEMAD"
           class="h-32 w-auto md:h-40"
         />
