--- a/paga-web-astro/src/components/Header.astro
+++ b/paga-web-astro/src/components/Header.astro
@@ -10,7 +10,7 @@ import MenuDropdown from "./MenuDropdown.astro";
     <!-- Logo y título - Responsivo -->
     <a href="/" class="flex items-center gap-2 sm:gap-3">
       <img
-        src="logos/logo.png"
+        src="/logos/logo.png"
         alt="Logo CIIEMAD IPN"
         class="h-10 sm:h-12 lg:h-16 w-auto"
       />
@@ -164,6 +164,14 @@ import MenuDropdown from "./MenuDropdown.astro";
             class="block font-bold text-gray-700 hover:text-gray-600 transition-colors duration-200"
           >
             Podcast
+          </a>
+        </li>
+        <li>
+          <a
+            href="/blog"
+            class="block font-bold text-gray-700 hover:text-purple-600 transition-colors duration-200"
+          >
+            Blog
           </a>
         </li>
       </ul>
